# EmbyExplorerQt

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.936ef09  CMakeLists.txt.user.b73da40  EmbyExplorerQt_de.ts  EmbyExplorerQt_en.qm  EmbyExplorerQt_en.ts  EmbyExplorerQt_en_US.ts  README.md  aboutdialog.cpp  aboutdialog.h  aboutdialog.ui  detailsdialog.cpp  detailsdialog.h  detailsdialog.ui  dispatcher.cpp  dispatcher.h  export.cpp  export.h  globals.h  jbpreferences.cpp  jbpreferences.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  messagedialog.cpp  messagedialog.h  preferencesdialog.cpp  preferencesdialog.h  preferencesdialog.ui  resource.qrc  restapi.cpp  restapi.h  splashdialog.cpp  splashdialog.h  splashdialog.ui  stylesheets.h
.qtcreator/: CMakeLists.txt.user.232548a
QXlsx/source/: xlsxchartsheet.cpp  xlsxconditionalformatting.cpp  xlsxcontenttypes.cpp  xlsxrichstring.cpp  xlsxworksheet.cpp
include/: XMLWriter.hpp
include/Xlsx/: SimpleXlsxDef.h  Worksheet.h
